manifests/netpolmgr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: netpolmgr
  name: netpolmgr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netpolmgr
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: netpolmgr
    spec:
      containers:
      - image: r4rajat/netpolmgr
        name: netpolmgr
        args:
          - --tls-cert-file=/var/run/webhook/serving-cert/tls.crt
          - --tls-private-key-file=/var/run/webhook/serving-cert/tls.key
          - --v=4
        resources: {}
        volumeMounts:
          - mountPath: /var/run/webhook/serving-cert
            name: serving-cert
      volumes:
        - name: serving-cert
          secret:
            secretName: certs
status: {}
