manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: netpolmgr
  name: netpolmgr
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: netpolmgr
status:
  loadBalancer: {}
