manifests/validation-pod-label.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "netpolmgr.rajatgupta.me"
webhooks:
  - name: "netpolmgr.rajatgupta.me"
    rules:
      - apiGroups:   [""]
        apiVersions: ["v1"]
        operations:  ["UPDATE"]
        resources:   ["pods"]
        scope:       "*"
    clientConfig:
      service:
        namespace: "default"
        name: "netpolmgr"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZRekNDQXl1Z0F3SUJBZ0lVTVpMVkNnTTFOY1plb3JVQ1NwalVCMEk1bVpnd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0lERWVNQndHQTFVRUF3d1ZibVYwY0c5c2JXZHlMbVJsWm1GMWJIUXVjM1pqTUI0WERUSXlNRGN4TURFdwpNRFF4TVZvWERUSXpNRGN4TURFd01EUXhNVm93SURFZU1Cd0dBMVVFQXd3VmJtVjBjRzlzYldkeUxtUmxabUYxCmJIUXVjM1pqTUlJQ0lqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FnOEFNSUlDQ2dLQ0FnRUF4MzRMYjlKOCtLS0oKUi96Mjlab0w4SDJBaFAreGRXdWNPVEtzVkZjb0cvMUo2QTBMY1pYRFNyVlhXQWpjdjE4SXRNYmw3UWNTWlE4cQpTYTZ5SDNzL24 [...]
    admissionReviewVersions: ["v1", "v1beta1"]
    sideEffects: None
    timeoutSeconds: 5
